--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -16,6 +16,12 @@ jobs:
       - name: 'Check out repository'
         uses: actions/checkout@v4
 
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: 17
+          cache: 'maven'
+
       - name: 'Build Native Image'
         run: |
           pushd server
