--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -22,6 +22,13 @@ jobs:
           java-version: 17
           cache: 'maven'
 
+      - uses: graalvm/setup-graalvm@v1
+        with:
+          java-version: '17'
+          distribution: 'graalvm'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          native-image-job-reports: 'true'
+
       - name: 'Build Native Image'
         run: |
           mvn install -DskipTests
