fix: proper path to artifacts

--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -47,5 +47,5 @@ jobs:
         with:
           name: artifacts-${{ runner.os }}-${{ runner.arch }}
           path: |
-            target/*.zip
-            target/*.tar.gz
+            server/target/distributions/*.zip
+            server/target/distributions/*.tar.gz
