feat: only output tar.gz files

--- a/pom.xml
+++ b/pom.xml
@@ -295,19 +295,19 @@
                                             </artifact>-->
                                             <artifact>
                                                 <path>
-                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-x86_64.zip
+                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-x86_64.tar.gz
                                                 </path>
                                                 <transform>
-                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-osx-x86_64.zip
+                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-osx-x86_64.tar.gz
                                                 </transform>
                                                 <platform>osx-x86_64</platform>
                                             </artifact>
                                             <artifact>
                                                 <path>
-                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-aarch_64.zip
+                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-aarch_64.tar.gz
                                                 </path>
                                                 <transform>
-                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-osx-aarch_64.zip
+                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-osx-aarch_64.tar.gz
                                                 </transform>
                                                 <platform>osx-aarch_64</platform>
                                             </artifact>
