--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -29,9 +29,11 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           native-image-job-reports: 'true'
 
+      - name: 'Build project'
+        run: mvn install -DskipTests
+        
       - name: 'Build Native Image'
         run: |
-          mvn install -DskipTests
           pushd server
           mvn -ntp -B --file pom.xml -Pnative package -DskipTests
           popd
@@ -45,7 +47,22 @@ jobs:
       - name: 'Upload build artifact'
         uses: actions/upload-artifact@v4
         with:
-          name: artifacts-${{ runner.os }}-${{ runner.arch }}
-          path: |
-            server/target/distributions/*.zip
-            server/target/distributions/*.tar.gz
+          name: power-server-${{ runner.os }}-${{ runner.arch }}
+          path: server/target/distributions/*.tar.gz
+
+      # checkout will clobber downloaded artifacts
+      # we have to download them again
+      - name: 'Download all build artifacts'
+        uses: actions/download-artifact@v4
+        with:
+          path: server/artifacts
+          pattern: power-server-*
+          merge-multiple: true
+
+      - name: 'Release with JReleaser'
+        env:
+          JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          pushd server
+          mvn -ntp -B --file pom.xml -Prelease -DartifactsDir=artifacts jreleaser:full-release -Djreleaser.dry.run=true
+          popd server
