--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -122,7 +122,7 @@ jobs:
       - name: 'Download all build artifacts'
         uses: actions/download-artifact@v4
         with:
-          path: server/artifacts
+          path: artifacts
           pattern: power-server-*
           merge-multiple: true
 
