--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 
     <properties>
         <compiler-plugin.version>3.13.0</compiler-plugin.version>
-        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
@@ -186,7 +186,7 @@
                 <version>${formatter-plugin.version}</version>
                 <configuration>
                     <!-- Setting to 17 because the plugin does not support 21 -->
-                    <compilerCompliance>17</compilerCompliance>
+<!--                    <compilerCompliance>17</compilerCompliance>-->
                     <configFile>eclipse-format.xml</configFile>
                     <lineEnding>LF</lineEnding>
                     <skip>${format.skip}</skip>
