--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu-latest, macOS-latest, macos-latest-large ]
+        os: [ ubuntu-latest, macOS-latest, macos-13 ]
     runs-on: ${{ matrix.os }}
     steps:
       - name: 'Check out repository'
