--- a/measure/pom.xml
+++ b/measure/pom.xml
@@ -18,6 +18,11 @@
       <artifactId>power-server-metadata</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math3</artifactId>
+      <version>3.6.1</version>
+    </dependency>
   </dependencies>
 
   <build>
