--- a/measure/pom.xml
+++ b/measure/pom.xml
@@ -23,6 +23,11 @@
       <artifactId>commons-math3</artifactId>
       <version>3.6.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.hdrhistogram</groupId>
+      <artifactId>HdrHistogram</artifactId>
+      <version>2.2.2</version>
+    </dependency>
   </dependencies>
 
   <build>
