--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -16,7 +16,10 @@
         <dependency>
             <groupId>eu.hoefel</groupId>
             <artifactId>units</artifactId>
-            <version>4.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
         </dependency>
     </dependencies>
 
