refactor: simplify formatting pluging handling

--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -31,21 +31,15 @@
     </dependencies>
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>net.revelc.code.formatter</groupId>
-                    <artifactId>formatter-maven-plugin</artifactId>
-                    <dependencies>
-                        <dependency>
-                            <groupId>net.laprun.sustainability</groupId>
-                            <artifactId>build-tools</artifactId>
-                            <version>0.1.1-SNAPSHOT</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <configuration>
+                    <configFile>../contributing/eclipse-format.xml</configFile>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
