--- a/server/pom.xml
+++ b/server/pom.xml
@@ -31,21 +31,15 @@
         <version>${os-maven-plugin.version}</version>
       </extension>
     </extensions>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>net.revelc.code.formatter</groupId>
-          <artifactId>formatter-maven-plugin</artifactId>
-          <dependencies>
-            <dependency>
-              <groupId>net.laprun.sustainability</groupId>
-              <artifactId>build-tools</artifactId>
-              <version>${project.version}</version>
-            </dependency>
-          </dependencies>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <configuration>
+          <configFile>../contributing/eclipse-format.xml</configFile>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
   <profiles>
     <profile>
