--- a/server/pom.xml
+++ b/server/pom.xml
@@ -32,6 +32,15 @@
       <artifactId>quarkus-rest-client</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-orm-panache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkiverse.jdbc</groupId>
+      <artifactId>quarkus-jdbc-sqlite4j</artifactId>
+      <version>0.0.5</version>
+    </dependency>
   </dependencies>
   <build>
     <extensions>
