--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 quarkus.http.port=20432
+quarkus.datasource.jdbc.url=jdbc:sqlite:power-server.db
+quarkus.datasource.db-kind=sqlite
+
+quarkus.hibernate-orm.database.generation=create
+power-server.db.location=${PWD}/power-server.sqlite
