wip: initial work on persisting measures to SQLite

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -22,6 +22,15 @@
       <artifactId>power-server-metadata</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-orm-panache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkiverse.jdbc</groupId>
+      <artifactId>quarkus-jdbc-sqlite4j</artifactId>
+      <version>0.0.5</version>
+    </dependency>
   </dependencies>
   <build>
     <extensions>
