implement scheduled backup for the SQLite DB

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 quarkus.http.port=20432
 quarkus.datasource.jdbc.url=jdbc:sqlite:power-server.db
 quarkus.datasource.db-kind=sqlite
+quarkus.datasource.jdbc.min-size=1
 
-quarkus.hibernate-orm.database.generation=create
-power-server.db.location=${PWD}/power-server.sqlite
+# Only use this property once to create the initial database
+# quarkus.hibernate-orm.database.generation=create
