implement scheduled backup for the SQLite DB

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,6 +27,10 @@
       <artifactId>quarkus-hibernate-orm-panache</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-scheduler</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.quarkiverse.jdbc</groupId>
       <artifactId>quarkus-jdbc-sqlite4j</artifactId>
       <version>0.0.5</version>
