feat: make backup period configurable

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,5 +3,7 @@ quarkus.datasource.jdbc.url=jdbc:sqlite:power-server.db
 quarkus.datasource.db-kind=sqlite
 quarkus.datasource.jdbc.min-size=1
 
+power-server.db.backup.period=5m
+
 # Only use this property once to create the initial database
 # quarkus.hibernate-orm.database.generation=create
