--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,14 +28,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
+
     - name: Build with Maven
       run: mvn -B package -Dquarkus.test.profile.tags='ci' --file pom.xml
+
+  native-check:
+    name: Perform native build check with default platform
+    uses: ./.github/workflows/native-build.yml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
 #    - name: Update dependency graph
