--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,50 +78,13 @@ jobs:
   # Build native executable per runner
   package:
     if: needs.maven-release.outputs.already_released != 'true'
-    needs: [ maven-release ]
-    name: 'Build with Graal on ${{ matrix.os }}'
+    needs: [maven-release]
     strategy:
-      fail-fast: true
       matrix:
         os: [ ubuntu-latest, macOS-latest, macos-13 ]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: 'Check out repository'
-        uses: actions/checkout@v4
-
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-          cache: 'maven'
-
-      - uses: graalvm/setup-graalvm@v1
-        with:
-          java-version: '21'
-          distribution: 'graalvm'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          native-image-job-reports: 'true'
-
-      - name: 'Build project'
-        run: mvn install -DskipTests
-
-      - name: 'Build Native Image'
-        run: |
-          pushd server
-          mvn -ntp -B --file pom.xml -Pnative package -DskipTests
-          popd
-
-      - name: 'Create distribution'
-        run: |
-          pushd server
-          mvn -ntp -B --file pom.xml -Pdist package -DskipTests
-          popd
-
-      - name: 'Upload build artifact'
-        uses: actions/upload-artifact@v4
-        with:
-          name: power-server-${{ runner.os }}-${{ runner.arch }}
-          path: server/target/distributions/*.tar.gz
+    uses: ./.github/workflows/native-build.yml
+    with:
+      platform: ${{ matrix.os }}
 
   # Collect all executables and release
   release:
