feat: make DB location configurable
Note that this currently requires the path to the file to exist before
the application is started

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 quarkus.http.port=20432
-quarkus.datasource.jdbc.url=jdbc:sqlite:power-server.db
+quarkus.datasource.jdbc.url=jdbc:sqlite:${power-server.db.backup.location}
 quarkus.datasource.db-kind=sqlite
 quarkus.datasource.jdbc.min-size=1
 
 power-server.db.backup.period=5m
+power-server.db.backup.location=${HOME}/.power-server/db.sqlite
 
 # Only use this property once to create the initial database
 # quarkus.hibernate-orm.database.generation=create
