fix: clean-up dependencies

--- a/if-manifest-export/pom.xml
+++ b/if-manifest-export/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>power-server-measure</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
