--- a/analysis/pom.xml
+++ b/analysis/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>HdrHistogram</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
