--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -32,6 +32,11 @@
       <artifactId>quarkus-jdbc-sqlite4j</artifactId>
       <version>${sqlite4j.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
