--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -17,8 +17,18 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>net.laprun.sustainability</groupId>
+      <artifactId>power-server-measure</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-picocli</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.smallrye.config</groupId>
+      <artifactId>smallrye-config-crypto</artifactId>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
