feat: extract persistence module

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <module>server</module>
         <module>cli</module>
         <module>if-manifest-export</module>
+        <module>persistence</module>
     </modules>
 
     <dependencyManagement>
