--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -9,9 +9,9 @@
     <version>0.3.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>power-server-backend</artifactId>
-  <name>power-server : backend</name>
-  <description>Power consumption measuring backend</description>
+  <artifactId>power-server-persistence</artifactId>
+  <name>power-server : persistence</name>
+  <description>Output measures to a database</description>
 
   <dependencies>
     <dependency>
@@ -21,14 +21,19 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-arc</artifactId>
+      <artifactId>quarkus-hibernate-orm-panache</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-junit5</artifactId>
-      <scope>test</scope>
+      <artifactId>quarkus-scheduler</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkiverse.jdbc</groupId>
+      <artifactId>quarkus-jdbc-sqlite4j</artifactId>
+      <version>${sqlite4j.version}</version>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
