fix: make things compile again

--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -22,6 +22,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>net.laprun.sustainability</groupId>
+      <artifactId>power-server-persistence</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-picocli</artifactId>
     </dependency>
