--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -26,6 +26,11 @@
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>nuprocess</artifactId>
+      <version>2.0.6</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
